# AITW-Darcy-Infiltration-Model

./: .pre-commit-config.yaml  README.md  data.py  infiltration.py  pyproject.toml
aitw_darcy/: __init__.py  data.py  infiltration.py
aitw_darcy/cli/: __init__.py
example/: input.json
